--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,50 @@
-alembic (0.9.7)
-beautifulsoup4 (4.6.0)
-bleach (2.1.2)
-blinker (1.4)
-bs4 (0.0.1)
-certifi (2018.1.18)
-chardet (3.0.4)
-click (6.7)
-coverage (4.5.1)
-dominate (2.3.1)
-Flask (0.12.2)
-Flask-Bootstrap (3.3.7.1)
-Flask-CKEditor (0.3.3)
-Flask-HTTPAuth (3.2.3)
-Flask-Login (0.4.1)
-Flask-Mail (0.9.1)
-Flask-Migrate (2.1.1)
-Flask-Moment (0.6.0)
-Flask-PageDown (0.2.2)
-Flask-Script (2.0.6)
-Flask-SQLAlchemy (2.3.2)
-Flask-SSLify (0.1.5)
-Flask-WTF (0.14.2)
-ForgeryPy (0.1)
-html5lib (1.0.1)
-httpie (0.9.9)
-idna (2.6)
-itsdangerous (0.24)
-jieba (0.39)
-Jinja2 (2.10)
-Mako (1.0.7)
-Markdown (2.6.11)
-MarkupSafe (1.0)
-numpy (1.14.1)
-pip (9.0.1)
-Pygments (2.2.0)
-pymongo (3.6.0)
-PyMySQL (0.8.0)
-python-dateutil (2.6.1)
-python-editor (1.0.3)
-requests (2.18.4)
-scikit-learn (0.19.1)
-scipy (1.0.0)
-setuptools (38.5.1)
-six (1.11.0)
-sklearn (0.0)
-SQLAlchemy (1.2.2)
-urllib3 (1.22)
-visitor (0.1.3)
-webencodings (0.5.1)
-Werkzeug (0.14.1)
-wheel (0.30.0)
-WTForms (2.1)
+alembic==0.9.7
+beautifulsoup4==4.6.0
+bleach==2.1.2
+blinker==1.4
+bs4==0.0.1
+certifi==2018.1.18
+chardet==3.0.4
+click==6.7
+coverage==4.5.1
+dominate==2.3.1
+Flask==0.12.2
+Flask-Bootstrap==3.3.7.1
+Flask-CKEditor==0.3.3
+Flask-HTTPAuth==3.2.3
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Migrate==2.1.1
+Flask-Moment==0.6.0
+Flask-PageDown==0.2.2
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+Flask-SSLify==0.1.5
+Flask-WTF==0.14.2
+ForgeryPy==0.1
+html5lib==1.0.1
+httpie==0.9.9
+idna==2.6
+itsdangerous==0.24
+jieba==0.39
+Jinja2==2.10
+Mako==1.0.7
+Markdown==2.6.11
+MarkupSafe==1.0
+numpy==1.14.1
+Pygments==2.2.0
+pymongo==3.6.0
+PyMySQL==0.8.0
+python-dateutil==2.6.1
+python-editor==1.0.3
+requests==2.18.4
+scikit-learn==0.19.1
+scipy==1.0.0
+six==1.11.0
+sklearn==0.0
+SQLAlchemy==1.2.2
+urllib3==1.22
+visitor==0.1.3
+webencodings==0.5.1
+Werkzeug==0.14.1
+WTForms==2.1
